# lab2-data-science

./: .gitignore  README.md
lab_02/: .gitignore  Part1_VHI.ipynb  Part2_Electric_Power.ipynb  README.md  requirements.txt
lab_03/: Lab3_Visualization.ipynb  README.md  requirements.txt
lab_04/: README.md  lab4_harmonic.py
lab_06/: .gitignore  CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab_06/include/: CameraProvider.hpp  Display.hpp  FrameProcessor.hpp  KeyProcessor.hpp  MouseHandler.hpp
lab_06/src/: CameraProvider.cpp  Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  MouseHandler.cpp  main.cpp
